implement display of 20 result